--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>Git start project</title>
 
 
 	<link rel="stylesheet" href="css/main.css">
@@ -14,7 +14,13 @@
 		<div class="header">
 		
 		<p>Hello, World!</p>
-		
+
+		<div class="block">
+			<div class="row">
+				<p>Welcome to my cosmos</p>
+			</div>
+		</div>
+
 			
 		</div>
 	</div>
