--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 		<div class="block">
 			<div class="row">
-				<p>Welcome to my cosmos</p>
+				<p>Welcome to my cosmos world</p>
 			</div>
 		</div>
 
