--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 
 		<div class="block">
 			<div class="row">
-				<p>Welcome to my cosmos world</p>
+				<h2>Welcome to my cosmic world</h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas voluptatibus consequuntur nisi porro, ab quaerat modi ullam iure reiciendis nesciunt est sed aspernatur eius rerum dolorum deserunt rem fugit ratione!</p>
 			</div>
 		</div>
 
